test github autoupdate

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -7,6 +7,7 @@
     <meta name='author' content='none'>
   </head>
   <body style='text-align: center;'>
+    <div>Test autoupdate from GitHub.</div>
     <div>
       <h3>Device Status</h3>
       <hr>
