reworked how user requested restarts are performed

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -78,7 +78,7 @@
     <script type='text/javascript'>
 			var confirmRestart = () => {
 				if (window.confirm('Confirm device restart.')) {
-					window.location = '/restart';
+					window.location = '/restart/confirmed';
 				}
 			}
       var getDeviceStatus = () => {
