--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -22,7 +22,7 @@
 				<div class='section-area section-narrow'>
 					<div class='section-title'>Serial Port</div>
 					<div>
-            <% let portName = settings.serial.port.slice(settings.serial.port.lastIndexOf('/')+1); %>
+            <% var portName = settings.serial.port.slice(settings.serial.port.lastIndexOf('/')+1); %>
 						<span class='section-item-name'>Port:</span><span class='section-item-value'><%= portName %></span>
 					</div>
 					<div>
